classDiagram
    direction TB

    class ITransport {
        <<interface>>
        +Start() Coro::Result~void~
        +Close() Coro::Result~void~  只发信号
        +WaitClosed() void  join
        +AsyncRead() 交出 read_queue 句柄
        +AsyncWrite(Datagram) Coro::Result~void~
        +LastError() error_code
        +CurrentLinkState() LinkState
    }
    class ICodec {
        <<interface>>
        +Encode(Message) bytes
        +Decode(bytes) Message[]
    }

    class ProtocolNode {
        +Send(Message) Coro::Result~void~
        +RequestForResponse(Message, RetryPolicy)
        +RequestForResult(Message, RetryPolicy, mid, ms)
        +RequestForResultDirect(Message, RetryPolicy, mid)
        +Subscribe(Key) Coro::Result~Ticket~
        -AwaitAccept() / EncodeAndWrite()
        -DecodeAndDispatch() / Dispatch()
        -NextSession() uint8
    }
    class DdsNode {
        +RegisterPublishers / RegisterSubscribers(topics)
        +RegisterClients / RegisterServices(service_names)
        +UnregisterPublishers / UnregisterSubscribers(topics)
        +UnregisterClients / UnregisterServices(service_names)
        +Publish(topic, Message)
        +Subscribe(TopicKey, KindKey) Coro::Result~Ticket~
        +RequestForResultDirect(service, Message, RetryPolicy)
        +ServeRequests(service) / Reply(request, result)
    }
    class NodeBase {
        <<生命周期基类>>
        +Start() / Close() / WaitClosed() / IsRunning()
        #DoStart()* / DoClose()* / DoJoin()*
    }
    class Dispatcher~T,Fields~ {
        <<协议无关机制>>
        +Subscribe(Key) Coro::Result~Ticket~
        +Dispatch(const T&) size_t
        +CloseAll(error)
        +Ticket::Wait(timeout) Coro::Result~T~
    }

    class TcpTransport {
        <<ADR-0011>>
        +socket 管理泵 + 读写双队列
        +连接管理内建（固定间隔重连、不自终）
    }
    class UdpTransport {
        <<编译面内 · ADR-0007 样板>>
    }
    class SerialTransport {
        <<ADR-0012>>
        +设备管理泵 + 读写双队列
        +静默超时唯一判活 · 自动重开、不自终
    }
    class DdsTransport {
        +listener 直推读队列 · 写侧专属 OS 线程
    }
    class TcpServer {
        <<不在编译面内>>
    }
    class SystemCodec
    class DatagramCodec
    class DdsCodec

    ITransport <|.. TcpTransport
    ITransport <|.. UdpTransport
    ITransport <|.. SerialTransport
    ITransport <|.. DdsTransport
    ICodec <|.. SystemCodec
    ICodec <|.. DatagramCodec
    ICodec <|.. DdsCodec

    ProtocolNode ..> ITransport : 借用（宿主启停）
    ProtocolNode *-- ICodec : 组合
    ProtocolNode *-- Dispatcher : 组合
    NodeBase <|-- ProtocolNode : 继承
    DdsNode ..> DdsTransport : 借用（宿主启停）
    DdsNode *-- ICodec : 组合
    NodeBase <|-- DdsNode : 继承
    TcpServer ..> ProtocolNode : 每连接派生
